--- a/webapp/channels/src/sass/components/_mentions.scss
+++ b/webapp/channels/src/sass/components/_mentions.scss
@@ -35,7 +35,7 @@ del .group-mention-link:focus {
     min-width: 10px;
     padding: 3px 7px;
     border-radius: 10px;
-    background-color: #777;
+    background-color: rgba(var(--center-channel-color-rgb), 0.64);
     color: #fff;
     font-size: 12px;
     font-weight: bold;
@@ -49,7 +49,7 @@ del .group-mention-link:focus {
     padding: 0 1px;
     border-radius: 4px;
     background-color: var(--mention-highlight-bg);
-    color: var(--mention-highlight-link);
+    color: var(--center-channel-color);
 
     .mention-link,
     .mention-link:hover,
@@ -67,7 +67,7 @@ del .group-mention-link:focus {
     padding: 0 1px;
     border-radius: 4px;
     background-color: var(--mention-highlight-bg);
-    color: var(--mention-highlight-link);
+    color: var(--center-channel-color);
 }
 
 .group-mention-link {
