--- a/webapp/channels/src/sass/routes/_settings.scss
+++ b/webapp/channels/src/sass/routes/_settings.scss
@@ -571,7 +571,7 @@
 
                 .file-status {
                     margin-top: 8px;
-                    color: #555;
+                    color: var(--center-channel-color);
                     font-size: 13px;
                 }
 
