--- a/webapp/channels/src/sass/routes/_signup.scss
+++ b/webapp/channels/src/sass/routes/_signup.scss
@@ -169,12 +169,12 @@ body {
 
     p {
         margin-bottom: 1em;
-        color: #555;
+        color: var(--center-channel-color);
         line-height: 1.5;
 
         .black,
         &.black {
-            color: #000;
+            color: var(--center-channel-color);
         }
     }
 
@@ -289,14 +289,14 @@ body {
             border-radius: 3px;
             margin: 1em 0 0;
             background: #f2f2f2;
-            color: #999;
+            color: rgba(var(--center-channel-color-rgb), 0.64);
             font-size: 14px;
 
             &::before {
                 @extend %font-awesome;
 
                 margin-right: 4px;
-                color: #aaa;
+                color: rgba(var(--center-channel-color-rgb), 0.5);
                 content: '\f071';
             }
         }
@@ -330,7 +330,7 @@ body {
     }
 
     .color--light {
-        color: #777;
+        color: rgba(var(--center-channel-color-rgb), 0.75);
     }
 }
 
