--- a/webapp/channels/src/sass/routes/_statistics.scss
+++ b/webapp/channels/src/sass/routes/_statistics.scss
@@ -85,7 +85,7 @@
 
             .fa {
                 margin: 0;
-                color: #555;
+                color: var(--center-channel-color);
                 float: right;
                 font-size: 16px;
             }
